--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3573,13 +3573,14 @@ input[type="submit"].btn.btn-mini {
   *z-index: 2;
   margin-bottom: 18px;
   overflow: visible;
+  background-color:374665;
 }
 
 .navbar-inner {
   min-height: 40px;
   padding-right: 20px;
   padding-left: 20px;
-  background-color: #2c2c2c;
+  background-color: #374665;
   background-image: -moz-linear-gradient(top, #333333, #222222);
   background-image: -ms-linear-gradient(top, #333333, #222222);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
@@ -3605,7 +3606,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar {
-  color: #999999;
+  color: #374665;
 }
 
 .navbar .brand:hover {
