default file changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,15 +9,15 @@
 	<title>default.html</title>
 	<meta property="og:type" content="article">
 	<meta property="og:title" content="Clouds">
-	<meta property="og:url" content="">
-	<meta property="og:image" content=""> <!--- Image size: minimum 200x200; preferred 1500x1500 -->
-	<meta property="og:site_name" content="GeoLogic">
+	<meta property="og:url" content="http://cassiec.github.io/large-data-website/">
+	<meta property="og:image" content="http://cassiec.github.io/large-data-website/"> <!--- Image size: minimum 200x200; preferred 1500x1500 -->
+	<meta property="og:site_name" content="Clouds">
 	<meta property="og:description" content="Types of clouds, their formation and what happens during formation. Weather related to each cloud, full description and images included.">
 	
 	<meta property="twitter:card" content="summary">
 	<meta property="twitter:title" content="Clouds, their formation and causes of weather">
-	<meta property="twitter:url" content="">
-	<meta property="twitter:image" content=""> <!--- Image size: minimum 120x120 -->
+	<meta property="twitter:url" content="http://cassiec.github.io/large-data-website/">
+	<meta property="twitter:image" content="http://cassiec.github.io/large-data-website/"> <!--- Image size: minimum 120x120 -->
 	<meta property="twitter:description" content="Types of clouds, their formation and what happens during formation. Weather related to each cloud, full description and images included.">
 
 <body>
