--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -445,7 +445,7 @@ h6 {
   margin: 0;
   font-family: inherit;
   font-weight: bold;
-  color: inherit;
+  color: #75a1d0;
   text-rendering: optimizelegibility;
 }
 
@@ -3212,7 +3212,7 @@ input[type="submit"].btn.btn-mini {
 
 .nav > li > a:hover {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #e2ecf6;
 }
 
 .nav > .pull-right {
