--- a/css/general.css
+++ b/css/general.css
@@ -17,6 +17,51 @@ html {
 	margin: 0;
 }
 
+.skiplinks{
+	margin:0;
+	padding:0;
+	position: absolute;
+	width: 100%;
+	z-index: 3000;
+	
+	font-size: 1.25rem;
+	font-weight: bold;
+	list-style-type: none;
+
+}
+
+.skiplinks a,
+.skiplinks a:link,
+.skiplinks a:visited {
+	padding: 0.5em 0.75em;
+	position: absolute;
+	top: -10em;
+	
+	background-color:#000;
+	
+	color: #fff;
+	text-decoration: none;
+}
+
+.skiplinks a:focus{
+	top:0;
+}
+
+a,
+a:link,
+a:visited {
+	outline: none; /*Removes the keyboard slection highlight */
+}
+
+a:hover,
+a:active {
+	outline: none; /* Removes the keyboard selection highligh */
+}
+
+a:focus{
+	outline: 2px solid #000;
+}
+
 h1{
 	position: left;
 	font: Verdana, Geneva, sans-serif;
@@ -102,6 +147,8 @@ figure{
 
 footer{
 	width:100%;
+	padding:0;
+	margin:0;
 	background-color: #374665;
 }
 	
